# cca

./: .gitignore  ErrorBoxComponent.hpp  InputComponent.hpp  MatrixComponent.hpp  README.md  cca.cpp  cca.hpp  cfg.hpp  cl_handler.hpp  filter.hpp  imgui.ini  improved-cca.sln  kernel.cu  ocl.hpp  perform_step.cl  utils.hpp
improved-cca/: CLHandler.cpp  CLHandler.h  CMakeLists.txt  ErrorBoxComponent.cpp  ErrorBoxComponent.h  Filter.cpp  Filter.h  InputComponent.cpp  InputComponent.h  MatrixComponent.cpp  MatrixComponent.h  cca.cpp  cca.h  cfg.cpp  cfg.h  imgui.ini  improved-cca.vcxproj  improved-cca.vcxproj.filters  main.cpp  ocl_utils.cpp  ocl_utils.h  utils.hpp  vcpkg.json
improved-cca/assets/: multiply_freq.cl
